# LabWork2

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: build.yml
architecture/: 01_general_description.md  02_requirements_and_scenarios.md  03_component_diagram.md  04_class_diagram.md  05_test_plan.md  06_test_report.md  07_additional_functionality.md  README.md
data/cards/: bash.json  beam_cell.json  defend_g.json  defend_r.json  dualcast.json  empty_fist_w.json  erupt_w.json  flex_ic.json  force_field.json  heavy_strike.json  iron_wave_ic.json  neutralize.json  nimble_dodge.json  piercing_shiv.json  poisoned_stab_s.json  sample.json  strike.json  strike_g.json  strike_r.json  tranquility_w.json  vigilance_w.json  zap.json
data/characters/: defect.json  ironclad.json  sample.json  silent.json  watcher.json
data/enemies/: acid_slime.json  book_of_stabbing.json  collector.json  cultist.json  gremlin_nob.json  hexaghost.json  jaw_worm.json  louse.json  maw.json  mushroom_warrior.json  nemesis.json  snake_plant.json  time_eater.json
data/events/: abandoned_shop.json  rest_site.json  strange_statue.json
data/relics/: akabeko.json  burning_blood.json  ring_of_the_snake.json
docs/doxygen/html/: annotated.html  annotated_dup.js  card_8cpp.html  card_8cpp__incl.map  card_8cpp__incl.md5  card_8h.html  card_8h.js  card_8h__dep__incl.map  card_8h__dep__incl.md5  card_8h__incl.map  card_8h__incl.md5  card_8h_source.html  character_8cpp.html  character_8cpp__incl.map  character_8cpp__incl.md5  character_8h.html  character_8h.js  character_8h__dep__incl.map  character_8h__dep__incl.md5  character_8h__incl.map  character_8h__incl.md5  character_8h_source.html  classdeckstiny_1_1_card-members.html  classdeckstiny_1_1_card.html  classdeckstiny_1_1_card.js  classdeckstiny_1_1_card__coll__graph.map  classdeckstiny_1_1_card__inherit__graph.md5  classdeckstiny_1_1_card_a1b3fcbe5da9a8028a384d371678ee32e_icgraph.map  classdeckstiny_1_1_card_a1b3fcbe5da9a8028a384d371678ee32e_icgraph.md5  classdeckstiny_1_1_card_a27107f35cf377410d4d286f7786d23df_icgraph.map  classdeckstiny_1_1_card_a27107f35cf377410d4d286f7786d23df_icgraph.md5  classdeckstiny_1_1_card_a27ee1454f3b25ed78f430f311119c901_cgraph.map  classdeckstiny_1_1_card_a27ee1454f3b25ed78f430f311119c901_cgraph.md5  classdeckstiny_1_1_card_a27ee1454f3b25ed78f430f311119c901_icgraph.map  classdeckstiny_1_1_card_a27ee1454f3b25ed78f430f311119c901_icgraph.md5  classdeckstiny_1_1_card_a2d53b4daa99cf41535a5475b936fd6e0_icgraph.map  classdeckstiny_1_1_card_a2d53b4daa99cf41535a5475b936fd6e0_icgraph.md5  classdeckstiny_1_1_card_a33f20919ddc5b99c44620a8174cfa470_cgraph.map  classdeckstiny_1_1_card_a33f20919ddc5b99c44620a8174cfa470_cgraph.md5  classdeckstiny_1_1_card_a4274275dd9113d2fd2355fb8c4d575a5_icgraph.map  (+903 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+60 more)
include/core/: Card.h  Character.h  Enemy.h  Event.h  Game.h  Relic.h  card.h  character.h  combat.h  enemy.h  entity.h  event.h  game.h  map.h  player.h  relic.h
include/ui/: TextUI.h  UI.h  graphical_ui.h  text_ui.h  ui_interface.h
include/util/: logger.h  path_util.h
src/: main.cpp  test.cpp
src/core/: Game.cpp  card.cpp  character.cpp  combat.cpp  enemy.cpp  entity.cpp  event.cpp  game.cpp  map.cpp  player.cpp  relic.cpp
src/include/: main.h
src/ui/: graphical_ui.cpp  text_ui.cpp
src/util/: CMakeLists.txt  logger.cpp  path_util.cpp
tests/: CMakeLists.txt  card_test.cpp  character_test.cpp  combat_test.cpp  event_test.cpp  game_test.cpp  map_test.cpp  relic_test.cpp  test.cpp  test_logger.h  test_main.cpp  ui_test.cpp
tests/include/: test.h
tests/mocks/: MockUI.cpp  MockUI.h
